[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/main/main_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/main_menu_bg.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/dunkel_logo.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/new_game_button.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/pressed_new_game_button.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/continue_button.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/pressed_continue_button.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/greyed_continue_button.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/quit_button.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/pressed_quit_button.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/finger.png" type="Texture" id=11]
[ext_resource path="res://assets/sounds/Cute_Swipe 01.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sounds/Confirm_02.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sounds/Cute_Error_02.wav" type="AudioStream" id=14]

[node name="main_menu" type="Node2D"]
script = ExtResource( 1 )

[node name="bg" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="title" type="TextureRect" parent="bg"]
margin_left = 238.966
margin_top = 136.391
margin_right = 682.966
margin_bottom = 243.391
texture = ExtResource( 3 )

[node name="new_game_button" type="TextureButton" parent="."]
margin_left = 333.041
margin_top = 387.151
margin_right = 588.041
margin_bottom = 445.151
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="continue_button" type="TextureButton" parent="."]
margin_left = 331.762
margin_top = 448.599
margin_right = 586.762
margin_bottom = 506.599
disabled = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_disabled = ExtResource( 8 )

[node name="quit_button" type="TextureButton" parent="."]
margin_left = 332.341
margin_top = 512.312
margin_right = 587.341
margin_bottom = 570.312
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )

[node name="pointer_new_game" type="TextureRect" parent="."]
margin_left = 266.969
margin_top = 392.715
margin_right = 319.969
margin_bottom = 432.715
texture = ExtResource( 11 )

[node name="pointer_continue" type="TextureRect" parent="."]
visible = false
margin_left = 267.027
margin_top = 456.324
margin_right = 320.027
margin_bottom = 496.324
texture = ExtResource( 11 )

[node name="pointer_quit" type="TextureRect" parent="."]
visible = false
margin_left = 267.498
margin_top = 522.523
margin_right = 320.498
margin_bottom = 562.523
texture = ExtResource( 11 )

[node name="pointer_blink_timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="swipe_sound_fx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
volume_db = -10.0

[node name="select_sound_fx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
volume_db = -10.0

[node name="error_sound_fx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
volume_db = -10.0
[connection signal="timeout" from="pointer_blink_timer" to="." method="_on_pointer_blink_timer_timeout"]
